fix(v2): update SearchPage styling, fix appearance dark mode

--- a/packages/docusaurus-theme-search-algolia/src/theme/SearchPage/styles.module.css
+++ b/packages/docusaurus-theme-search-algolia/src/theme/SearchPage/styles.module.css
@@ -8,13 +8,18 @@
 .searchQueryInput,
 .searchVersionInput {
   border-radius: var(--ifm-global-radius);
-  border: var(--ifm-global-border-width) solid
-    var(--ifm-color-content-secondary);
+  border: 0;
   font-size: var(--ifm-font-size-base);
-  padding: 0.5rem;
+  padding: 0.8rem;
   width: 100%;
-  background: #fff;
+  background: var(--docsearch-searchbox-focus-background);
+  color: var(--docsearch-text-color);
   margin-bottom: 1rem;
+  box-shadow: var(--docsearch-searchbox-shadow);
+}
+
+.searchQueryInput::placeholder {
+  color: var(--docsearch-muted-color);
 }
 
 .searchResultsColumn {
@@ -35,7 +40,7 @@
 
 .searchResultItem {
   padding: 1rem 0;
-  border-bottom: 1px solid #dfe3e8;
+  border-bottom: 1px solid var(--ifm-toc-border-color);
 }
 
 .searchResultItemHeading {
@@ -46,6 +51,13 @@
   font-size: 0.8rem;
   color: var(--ifm-color-content-secondary);
   display: block;
+}
+
+.searchResultItemPathSeparator {
+  margin: 0 0.25rem;
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--ifm-color-emphasis-400);
 }
 
 .searchResultItemSummary {
@@ -100,6 +112,7 @@
 }
 
 :global(.search-result-match) {
-  background: rgba(255, 215, 142, 0.22);
+  color: var(--docsearch-hit-color);
+  background: rgba(255, 215, 142, 0.25);
   padding: 0.09em 0;
 }
